<resources>
    <string name="app_name">VentaDeManillas</string>
    <string name="arma_tu_manilla">ARMA TU MANILLA</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="cantidad">Cantidad De Manillas</string>
    <string name="moneda">Moneda</string>
    <string name="pesos">Pesos</string>
    <string name="dolar">Dolar</string>
    <string name="valor">Valor a Pagar</string>
    <string name="calcular">Calcular</string>
    <string name="borrar">Borrar</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="Ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="message_error_uno">Digite la cantidad de manillas</string>
    <string name="message_error_dos">seleccione un tipo de moneda</string>
    <string-array name="material">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dije">
        <item>@string/martillo</item>
        <item>@string/Ancla</item>
    </string-array>
    <string-array name="tipo">
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
</resources>
